# bevy-playground

./: Cargo.toml
assets/: terrain.wgsl
assets/models/: link.glb  scene.gltf
assets/shaders/: custom_material.wgsl
src/: main.rs
