[package]
name = "playground-bevy"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
bevy_panorbit_camera = "0.22.0"
noise = "0.9.0"
rand = "0.8.5"

